# robot-safety-sandbox

./: .gitignore  INSTALL.md  LICENSE  MIGRATION.md  PORTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
configs/: README.md  car_goal.yaml  go2_stabilize_gameplaysac.yaml  go2_stabilize_reachavoidppo.yaml
docs/: API.md  EXTENDING.md  index.md  porting.md  reference.md  tutorial-car-goal.md
docs/environments/: digit.md  go2-crawl.md  go2-gap.md  index.md
docs/javascripts/: mathjax.js
examples/: _run_config.py  eval_brake_or_jump_filter.py  eval_brake_or_jump_value.py  eval_dstb_effect.py  eval_filter.py  play.py  toy_gap_e037.py  train.py  train_gameplay_sac.py  train_nominal.py  train_on_policy.py  train_sac.py
robot_safety_sandbox/: __init__.py  base.py  callbacks.py  margins.py  registry.py
robot_safety_sandbox/envs/assets_car/: car_constants.py
robot_safety_sandbox/filters/: qcbf.py  rollout_shield.py
robot_safety_sandbox/nominal/: classic_dense.py  go2_crawl_walker.py  go2_walker.py
robot_safety_sandbox/tasks/: car_goal.py  classic_safety.py  digit_safety.py  go2_crawl.py  go2_crawl_twins.py  go2_gap.py  go2_gap_brake_or_jump.py  go2_gap_split.py  go2_low_bar.py  go2_stabilize.py  go2_tunnel.py
runs_zoo/go2_gap_landing/: tensornormalize.pt
safe_mjlab_zoo/: __init__.py  base.py  callbacks.py  features.py  margins.py  registry.py
safe_mjlab_zoo/envs/go2_crawl/: twins.py  (+1 more)
safe_mjlab_zoo/filters/: __init__.py  base.py  qcbf.py  value_shield.py
safe_mjlab_zoo/nominal/: __init__.py  classic_dense.py  go2_crawl_walker.py  go2_walker.py
safe_mjlab_zoo/tasks/: classic_safety.py  digit_safety.py  go2_crawl.py  go2_crawl_twins.py  go2_gap.py  go2_stabilize.py
tools_e040/: chase_e040b.sh  diag_vfield.py  eval_split2_levels.py  eval_value_ordering.py  filter_demo_video.py  gap_filter_test.py  make_figure.py  make_split2_videos.py  probe_value_ordering.py
(+68 files in other folders)
