[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-safety-sandbox"
version = "0.1.0"
description = "Parallelized mjlab environments for nominal-policy training, safety-policy synthesis, and safety-filter evaluation"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "gymnasium",
  "stable_baselines3>=2.0",
  "safety_sb3 @ git+https://github.com/SafeRoboticsLab/safety-stable-baselines.git@v0.1.0",
  # peer dep (install separately -- needs its own pinned sim stack): mjlab
]

[tool.setuptools.packages.find]
include = ["robot_safety_sandbox*", "safe_mjlab_zoo"]  # second entry = deprecated alias shim
